frontend/tests/cases/negative/indexed/variableNotInResult.gr
data Vec n a = None
data VecX (a : Type) where
  VecX : ∀ {n : Nat} . Vec n a → VecX a